adding footer to the tribute project

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <li>1984 - becomes a distinguished professor at Texas A&M University</li>
 
         </div>
+        <h3>If you have time, you should read more about this incredible human being on his <a href="#"
+            target="blank">Wikipedia entry.</a></h3>
+
 
     </div>
 </body>
